# outlook2api

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.register  Dockerfile.render  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-register.txt
.github/workflows/: register-outlook.yml
outlook2api/: __init__.py  admin_routes.py  app.py  auth.py  config.py  database.py  outlook_imap.py  outlook_smtp.py  routes.py  store.py
outlook2api/static/: admin.html  index.html
register/: auto_import.py  captcha.py  outlook_register.py
